[gd_scene load_steps=10 format=3 uid="uid://ch2be6nl5eby5"]

[ext_resource type="Script" path="res://scenes/enemies/tractor.gd" id="1_jnumu"]
[ext_resource type="Texture2D" uid="uid://w18btpbc7bxv" path="res://Jeu Assets/Tractor.png" id="1_luu2i"]
[ext_resource type="Texture2D" uid="uid://cd7ar2ytil3on" path="res://Jeu Assets/Tractor_gun.png" id="3_x02eh"]
[ext_resource type="Texture2D" uid="uid://celtw3nkpwpgx" path="res://Jeu Assets/fire.png" id="4_iw8fg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x61m"]
size = Vector2(267, 190)

[sub_resource type="CircleShape2D" id="CircleShape2D_qm3ny"]
radius = 530.494

[sub_resource type="Animation" id="Animation_ytpt2"]
resource_name = "bullet_load"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Turret/fire1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Turret/fire1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.9, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Turret/fire2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Turret/fire2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.9, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4q8ta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Turret/fire1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Turret/fire1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqe85"]
_data = {
"RESET": SubResource("Animation_4q8ta"),
"bullet_load": SubResource("Animation_ytpt2")
}

[node name="tractor" type="PathFollow2D"]
scale = Vector2(3.64, 3.64)
script = ExtResource("1_jnumu")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 47

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.462857, 0.462857)
texture = ExtResource("1_luu2i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-15.5, 0)
shape = SubResource("RectangleShape2D_5x61m")

[node name="NoticeArea" type="Area2D" parent="."]
scale = Vector2(1, 1)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_qm3ny")

[node name="Turret" type="Node2D" parent="."]
position = Vector2(25.2747, 0.54945)

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
position = Vector2(-3.2855, 0.445775)
rotation = 0.00651624
scale = Vector2(0.463278, 0.463278)
texture = ExtResource("3_x02eh")
offset = Vector2(-52.1843, -0.593004)

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(85.7143, -17.5824)
target_position = Vector2(417.033, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
position = Vector2(0.262466, 0)
scale = Vector2(1.08663, 1)
points = PackedVector2Array(-0.494362, 0, 382.462, 0)
width = 1.0
default_color = Color(0.427451, 0, 0.0313726, 0.470588)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(85.7143, 19.2308)
target_position = Vector2(416.483, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(-0.274734, -1.90735e-06, 415.11, -1.90735e-06)
width = 1.0
default_color = Color(0.42887, 0, 0.0299255, 0.470588)

[node name="fire1" type="Sprite2D" parent="Turret"]
position = Vector2(86.8132, -17.4301)
rotation = 1.5708
scale = Vector2(0.0938329, 0.0991359)
texture = ExtResource("4_iw8fg")

[node name="fire2" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(85.7143, 20.0549)
rotation = 1.5708
scale = Vector2(0.0938329, 0.0991359)
texture = ExtResource("4_iw8fg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mqe85")
}

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
